Adding Python bindings for the horner scheme using double and vector<double>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ if( scion.python )
 
   pybind11_add_module( scion.python
       python/src/scion.python.cpp
+      python/src/math.python.cpp
+      python/src/math/horner.python.cpp
       )
 
   target_link_libraries( scion.python PRIVATE scion )
