Adding OpenDomain python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ if( scion.python )
       python/src/math/horner.python.cpp
       python/src/math/legendre.python.cpp
       python/src/math/IntervalDomain.python.cpp
+      python/src/math/OpenDomain.python.cpp
       )
 
   target_link_libraries( scion.python PRIVATE scion )
