--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ if( scion.python )
       python/src/math/IntervalDomain.python.cpp
       python/src/math/OpenDomain.python.cpp
       python/src/math/LegendreSeries.python.cpp
+      python/src/math/PolynomialSeries.python.cpp
       )
 
   target_link_libraries( scion.python PRIVATE scion )
