--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ if( scion.python )
   pybind11_add_module( scion.python
       python/src/scion.python.cpp
       python/src/math.python.cpp
+      python/src/math/compare.python.cpp
       python/src/math/horner.python.cpp
       python/src/math/legendre.python.cpp
       python/src/math/IntervalDomain.python.cpp
