Adding python bindings for interpolation functions and added python tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,8 @@ if( scion.python )
 
   pybind11_add_module( scion.python
       python/src/scion.python.cpp
+      python/src/interpolation.python.cpp
+      python/src/interpolation/interpolation.python.cpp
       python/src/math.python.cpp
       python/src/math/compare.python.cpp
       python/src/math/horner.python.cpp
