--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,8 @@ if( scion.python )
       python/src/scion.python.cpp
       python/src/interpolation.python.cpp
       python/src/interpolation/interpolation.python.cpp
+      python/src/linearisation.python.cpp
+      python/src/linearisation/MidpointSplit.python.cpp
       python/src/math.python.cpp
       python/src/math/compare.python.cpp
       python/src/math/horner.python.cpp
