Adding ToleranceConvergence python bindings and python test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ if( scion.python )
       python/src/interpolation/interpolation.python.cpp
       python/src/linearisation.python.cpp
       python/src/linearisation/MidpointSplit.python.cpp
+      python/src/linearisation/ToleranceConvergence.python.cpp
       python/src/math.python.cpp
       python/src/math/compare.python.cpp
       python/src/math/horner.python.cpp
