Updating python bindings and python tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ if( scion.python )
       python/src/math/OpenDomain.python.cpp
       python/src/math/LinearLinearTable.python.cpp
       python/src/math/LogLogTable.python.cpp
+      python/src/math/LogLinearTable.python.cpp
+      python/src/math/LinearLogTable.python.cpp
       python/src/math/LegendreSeries.python.cpp
       python/src/math/PolynomialSeries.python.cpp
       )
