--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ if( scion.python )
       python/src/math/clenshaw.python.cpp
       python/src/math/compare.python.cpp
       python/src/math/horner.python.cpp
+      python/src/math/newton.python.cpp
       python/src/math/legendre.python.cpp
       python/src/math/IntervalDomain.python.cpp
       python/src/math/OpenDomain.python.cpp
