Adding Python bindings for the Chebyshev approximation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ if( scion.python )
       python/src/math/LogLinearTable.python.cpp
       python/src/math/LinearLogTable.python.cpp
       python/src/math/ChebyshevSeries.python.cpp
+      python/src/math/ChebyshevApproximation.python.cpp
       python/src/math/LegendreSeries.python.cpp
       python/src/math/PolynomialSeries.python.cpp
       )
