Adding python bindings for the HistogramTable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ if( scion.python )
       python/src/math/IntervalDomain.python.cpp
       python/src/math/OpenDomain.python.cpp
       python/src/math/LinearLinearTable.python.cpp
+      python/src/math/HistogramTable.python.cpp
       python/src/math/LogLogTable.python.cpp
       python/src/math/LogLinearTable.python.cpp
       python/src/math/LinearLogTable.python.cpp
