--- a/src/scion/interpolation/Histogram/test/CMakeLists.txt
+++ b/src/scion/interpolation/Histogram/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_executable( scion.interpolation.Histogram.test Histogram.test.cpp )
+target_link_libraries( scion.interpolation.Histogram.test PRIVATE Catch2::Catch2WithMain )
+
 target_compile_options( scion.interpolation.Histogram.test PRIVATE ${${PREFIX}_common_flags}
 $<$<BOOL:${strict}>:${${PREFIX}_strict_flags}>$<$<CONFIG:DEBUG>:
 ${${PREFIX}_DEBUG_flags}
