--- a/src/scion/linearisation/Lineariser/test/CMakeLists.txt
+++ b/src/scion/linearisation/Lineariser/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_executable( scion.linearisation.Lineariser.test Lineariser.test.cpp )
+target_link_libraries( scion.linearisation.Lineariser.test PRIVATE Catch2::Catch2WithMain )
+
 target_compile_options( scion.linearisation.Lineariser.test PRIVATE ${${PREFIX}_common_flags}
 $<$<BOOL:${strict}>:${${PREFIX}_strict_flags}>$<$<CONFIG:DEBUG>:
 ${${PREFIX}_DEBUG_flags}
