--- a/src/scion/math/HistogramTable/test/CMakeLists.txt
+++ b/src/scion/math/HistogramTable/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_executable( scion.math.HistogramTable.test HistogramTable.test.cpp )
+target_link_libraries( scion.math.HistogramTable.test PRIVATE Catch2::Catch2WithMain )
+
 target_compile_options( scion.math.HistogramTable.test PRIVATE ${${PREFIX}_common_flags}
 $<$<BOOL:${strict}>:${${PREFIX}_strict_flags}>$<$<CONFIG:DEBUG>:
 ${${PREFIX}_DEBUG_flags}
