--- a/src/scion/unionisation/unionise/test/CMakeLists.txt
+++ b/src/scion/unionisation/unionise/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_executable( scion.unionisation.unionise.test unionise.test.cpp )
+target_link_libraries( scion.unionisation.unionise.test PRIVATE Catch2::Catch2WithMain )
+
 target_compile_options( scion.unionisation.unionise.test PRIVATE ${${PREFIX}_common_flags}
 $<$<BOOL:${strict}>:${${PREFIX}_strict_flags}>$<$<CONFIG:DEBUG>:
 ${${PREFIX}_DEBUG_flags}
