--- a/src/scion/math/compare/test/CMakeLists.txt
+++ b/src/scion/math/compare/test/CMakeLists.txt
@@ -1,20 +1,1 @@
-
-add_executable( scion.math.compare.test compare.test.cpp )
-target_link_libraries( scion.math.compare.test PRIVATE Catch2::Catch2WithMain )
-
-target_compile_options( scion.math.compare.test PRIVATE ${${PREFIX}_common_flags}
-$<$<BOOL:${strict}>:${${PREFIX}_strict_flags}>$<$<CONFIG:DEBUG>:
-${${PREFIX}_DEBUG_flags}
-$<$<BOOL:${coverage}>:${${PREFIX}_coverage_flags}>>
-$<$<CONFIG:RELEASE>:
-${${PREFIX}_RELEASE_flags}
-$<$<BOOL:${link_time_optimization}>:${${PREFIX}_link_time_optimization_flags}>
-$<$<BOOL:${nonportable_optimization}>:${${PREFIX}_nonportable_optimization_flags}>>
-
-${CXX_appended_flags} ${scion_appended_flags} )
-target_link_libraries( scion.math.compare.test PUBLIC scion )
-file( GLOB resources "resources/*" )
-foreach( resource ${resources})
-    file( COPY "${resource}" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}" )
-endforeach()
-add_test( NAME scion.math.compare COMMAND scion.math.compare.test )
+add_cpp_test( math.compare compare.test.cpp )
