Adding python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,8 @@ if( scion.python )
       python/src/interpolation.python.cpp
       python/src/interpolation/interpolation.python.cpp
       python/src/interpolation/InterpolationType.python.cpp
+      python/src/integration.python.cpp
+      python/src/integration/integration.python.cpp
       python/src/linearisation.python.cpp
       python/src/linearisation/MidpointSplit.python.cpp
       python/src/linearisation/ToleranceConvergence.python.cpp
