Setting up a Gauss quadrature base class, implement 2 and 7 point and add test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ if( scion.python )
       python/src/interpolation/InterpolationType.python.cpp
       python/src/integration.python.cpp
       python/src/integration/integration.python.cpp
+      python/src/integration/GaussLegendre.python.cpp
       python/src/linearisation.python.cpp
       python/src/linearisation/MidpointSplit.python.cpp
       python/src/linearisation/ToleranceConvergence.python.cpp
