Updating code following name changes

--- a/src/scion/integration/LinearLogarithmicMean/test/CMakeLists.txt
+++ b/src/scion/integration/LinearLogarithmicMean/test/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_cpp_test( integration.FirstMomentLinearLogarithmic FirstMomentLinearLogarithmic.test.cpp )
+add_cpp_test( integration.LinearLogarithmicMean LinearLogarithmicMean.test.cpp )
