--- a/src/scion/integration/LogarithmicLinearMean/test/CMakeLists.txt
+++ b/src/scion/integration/LogarithmicLinearMean/test/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_cpp_test( integration.FirstMomentLogarithmicLinear FirstMomentLogarithmicLinear.test.cpp )
+add_cpp_test( integration.LogarithmicLinearMean LogarithmicLinearMean.test.cpp )
