running scheduled windows test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ trigger_ci_downstream:
 
   trigger:
     project: NJOY/common_ci
-    branch: main
+    branch: 1-add-windows-ci-script
     strategy: depend
 
   variables:
