--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ include_directories( src/ )
 add_library( scion INTERFACE )
 target_include_directories( scion INTERFACE src/ )
 target_link_libraries( scion
-    INTERFACE Log
-    INTERFACE catch-adapter
+    INTERFACE tools
+    INTERFACE Catch2
     )
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
